array.island.Island.scala.error
Compilation error:
Island:15: error: ')' expected but 'else' found.
    else if (num(i) == num(i+1) statut = 0;
    ^